<resources>
    <string name="app_name">2_Suns 5/3/1 LP</string>
    <string name="activity_history">2_Suns 5/3/1 LP: History</string>
    <string name="activity_setup">2_Suns 5/3/1 LP: Setup</string>

    <string name="bench">Bench</string>
    <string name="press">OHP</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="unit">Unit</string>
    <string name="round">Round</string>

    <string name="done">Done</string>
    <string name="volume">Volume</string>

    <string name="training_max">Training Maxes</string>
    <string name="settings">Settings</string>
    <string name="variation">Variation</string>
    <string name="bar_weight">Bar Weight</string>
    <string name="plates">Plates</string>
    <string name="plate_calculator">Plate Calculator</string>
    <string name="weight">Weight</string>
    <string name="pairs">Pairs</string>

    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="units">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="variations">
        <item>4 Day</item>
        <item>5 Day</item>
        <item>6 Day (Squat)</item>
        <item>6 Day (Deadlift)</item>
    </string-array>

    <string name="workout_key">com.cameronzemek.workout.SESSION</string>

    <!-- Preferences -->
    <string name="preference_file_key">com.cameronzemek.workout.SETTINGS</string>
</resources>
