<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cameronzemek.workout.SetupActivity"
    android:orientation="vertical">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnSave">

        <android.support.v7.widget.GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            grid:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unit"
                android:id="@+id/lblUnit"
                android:layout_marginRight="50sp"
                grid:layout_gravity="fill_horizontal"/>

            <Spinner
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerUnit"
                android:entries="@array/units"
                android:padding="0dp"
                android:textSize="@dimen/text_size_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/squat"
                android:id="@+id/lblSquat"
                android:layout_marginRight="50sp"
                grid:layout_gravity="fill_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/editSquatWeight"
                android:hint="weight"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bench"
                android:id="@+id/lblBench"
                android:layout_marginRight="10sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/editBenchWeight"
                android:hint="weight"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/deadlift"
                android:id="@+id/lblDeadlift"
                android:layout_marginRight="10sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/editDeadliftWeight"
                android:hint="weight"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/press"
                android:id="@+id/lblPress"
                android:layout_marginRight="10sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/editPressWeight"
                android:hint="weight"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/week"
                android:id="@+id/lblWeek"
                android:layout_marginRight="10sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="6"
                android:id="@+id/editWeek"
                android:hint="@string/week"
                android:selectAllOnFocus="true" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDay"
                grid:layout_columnSpan="2"
                android:entries="@array/day"
                android:padding="0dp"
                android:textSize="@dimen/text_size_large"/>

        </android.support.v7.widget.GridLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/LargeButton"
        android:onClick="onSave" />

</RelativeLayout>